# tpu-mlir

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  build.sh  download_toolchains.sh  envsetup.sh  release.sh  release_pip.sh  requirements.txt
.github/: copilot-instructions.md
bindings/pymlir/: CMakeLists.txt  pycuda.cpp  pycuda.h
bindings/pymlir/cuda/: A16MatMul.cpp  Abs.cpp  AdaptiveAvgPool.cpp  Arccos.cpp  Arctanh.cpp  Attention.cpp  BatchNorm.cpp  CMakeLists.txt  Ceil.cpp  Clip.cpp  Compare.cpp  ConstantFill.cpp  Conv3D.cpp  Correlation.cpp  Cos.cpp  Cosh.cpp  CumSum.cpp  Div.cpp  Elu.cpp  Erf.cpp  Exp.cpp  Expand.cpp  FAttention.cpp  GRU.cpp  GatherElements.cpp  GatherND.cpp  GenericCpu.cpp  GroupNorm.cpp  HardSigmoid.cpp  HardSwish.cpp  IndexPut.cpp  InstanceNorm.cpp  LRN.cpp  LSTM.cpp  LayerNormTrain.cpp  LeakyRelu.cpp  Log.cpp  LogB.cpp  LogicalAnd.cpp  MatMul.cpp  (+18 more)
hooks/: pre-commit
lib/: CMakeLists.txt
lib/Interfaces/: LocalGenInterface.cpp
lib/PplBackend/: .md5  CMakeLists.txt  Dynkernel.cmake  build.sh
lib/Support/: Float16.cpp  GmemAllocatorMethod.cpp  LutFunc.cpp  MathUtils.cpp  Module.cpp  TPUCompressUtil.cpp
python/: CMakeLists.txt
python/calibration/: transformer_pattern.py  utils.py
python/llm/: Chatglm3Converter.py  GGUFQuantLoad.py  GLM4VConverter.py  Gemma3Converter.py  Gemma4Converter.py  InternVL3Converter.py  JanusConverter.py  LFM2VLConverter.py  Llama3_2VConverter.py  LlmConverter.py  LlmInfo.py  __init__.py  (+14 more)
regression/: chip.py  main_entry.py  run.sh  run_all.sh  run_model.py
release_tools/: __init__.py  envsetup.sh
(+148 files in other folders)
